@@ -129,7 +129,6 @@ extern ink_hrtime last_shedding_warning;
 extern ink_hrtime emergency_throttle_time;
 extern int net_connections_throttle;
 extern int fds_throttle;
-extern bool throttle_enabled;
 extern int fds_limit;
 extern ink_hrtime last_transient_accept_error;
 extern int http_accept_port_number;
@@ -262,12 +261,8 @@ emergency_throttle(ink_hrtime now)
 TS_INLINE int
 check_net_throttle(ThrottleType t, ink_hrtime now)
 {
-  if(throttle_enabled == false) {
-    // added by Vijay to disable throttle. This is done find out if
-    // there any other problem other than the stats problem -- bug 3040824
-    return false;
-  }
   int connections = net_connections_to_throttle(t);
+
   if (connections >= net_connections_throttle)
     return true;
 
