@@ -28,7 +28,6 @@ ink_hrtime last_shedding_warning;
 ink_hrtime emergency_throttle_time;
 int net_connections_throttle;
 int fds_throttle;
-bool throttle_enabled;
 int fds_limit = 8000;
 ink_hrtime last_transient_accept_error;
 
